fefactor: add svg convert button instead of png

--- a/CyrillicToLatinWordPlugIn/CyrillicToLatinWordPlugIn.csproj
+++ b/CyrillicToLatinWordPlugIn/CyrillicToLatinWordPlugIn.csproj
@@ -209,6 +209,9 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Svg" Version="3.4.4" />
+  </ItemGroup>
   <!--
     This section defines the user source files that are part of the project.
      
@@ -263,15 +266,11 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\dark-theme-icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\light-theme-icon.png" />
+    <None Include="Resources\btn-image.svg" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">
-      $(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
