--- a/CyrillicToLatinWordAddIn/CyrillicToLatinWordAddIn.csproj
+++ b/CyrillicToLatinWordAddIn/CyrillicToLatinWordAddIn.csproj
@@ -26,8 +26,8 @@
     <ProjectGuid>{321FC478-5EB1-478F-A312-DA0E1AC9A673}</ProjectGuid>
     <OutputType>Library</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <RootNamespace>CyrillicToLatinWordPlugIn</RootNamespace>
-    <AssemblyName>CyrillicToLatinWordPlugIn</AssemblyName>
+    <RootNamespace>CyrillicToLatinWordAddIn</RootNamespace>
+    <AssemblyName>CyrillicToLatinWordAddIn</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <DefineConstants>VSTO40;UseOfficeInterop</DefineConstants>
     <ResolveComReferenceSilent>true</ResolveComReferenceSilent>
@@ -41,10 +41,10 @@
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
-    <ProductName>CyrillicToLatinWordPlugIn</ProductName>
+    <ProductName>CyrillicToLatinWordAddIn</ProductName>
     <PublisherName />
     <SupportUrl />
-    <FriendlyName>CyrillicToLatinWordPlugIn</FriendlyName>
+    <FriendlyName>CyrillicToLatinWordAddIn</FriendlyName>
     <OfficeApplicationDescription />
     <LoadBehavior>3</LoadBehavior>
   </PropertyGroup>
@@ -68,7 +68,7 @@
   <PropertyGroup>
     <!--
       OfficeApplication
-        Plug-In host application
+        Add-In host application
     -->
     <OfficeApplication>Word</OfficeApplication>
   </PropertyGroup>
@@ -254,14 +254,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="ThisPlugIn.cs">
+    <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
-    <None Include="ThisPlugIn.Designer.xml">
-      <DependentUpon>ThisPlugIn.cs</DependentUpon>
+    <None Include="ThisAddIn.Designer.xml">
+      <DependentUpon>ThisAddIn.cs</DependentUpon>
     </None>
-    <Compile Include="ThisPlugIn.Designer.cs">
-      <DependentUpon>ThisPlugIn.Designer.xml</DependentUpon>
+    <Compile Include="ThisAddIn.Designer.cs">
+      <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
     </Compile>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
@@ -276,7 +276,7 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>CyrillicToLatinWordPlugIn_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>CyrillicToLatinWordAddIn_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>9FD21DF76591AB18A02FE46BCED0FB6E6D60C23B</ManifestCertificateThumbprint>
@@ -295,11 +295,11 @@
           TemplatesPath=""
           DebugInfoExeName="#Software\Microsoft\Office\16.0\Word\InstallRoot\Path#WINWORD.EXE"
           DebugInfoCommandLine="/x" AddItemTemplatesGuid="{51063C3A-E220-4D12-8922-BDA915ACD783}" />
-        <Host Name="Word" GeneratedCodeNamespace="CyrillicToLatinWordPlugIn"
+        <Host Name="Word" GeneratedCodeNamespace="CyrillicToLatinWordAddIn"
           PublishedHash="69C324AB27932AA2FBF2B7EA72250886FF164DE6" IconIndex="0">
-          <HostItem Name="ThisPlugIn" Code="ThisPlugIn.cs" CanonicalName="PlugIn"
+          <HostItem Name="ThisAddIn" Code="ThisAddIn.cs" CanonicalName="AddIn"
             PublishedHash="9B14C52CADB5FF136690316DAE2ADFECB4E9648E" CanActivate="false"
-            IconIndex="1" Blueprint="ThisPlugIn.Designer.xml" GeneratedCode="ThisPlugIn.Designer.cs" />
+            IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.cs" />
         </Host>
       </FlavorProperties>
     </VisualStudio>
